--- a/aufgabe_temp_ueberwachung_esp32_dht22_mqtt_mosquitto_aufgabentext.tex
+++ b/aufgabe_temp_ueberwachung_esp32_dht22_mqtt_mosquitto_aufgabentext.tex
@@ -25,22 +25,22 @@
 \chapter{Einleitung}
 In Rechenzentren, der Schule und anderen Szenarien sollen Umweltdaten erfasst werden. Abhängig von Messwerten sollen Aktionen ausgelöst werden (Info, Alarm, \dots).
 
-Im Kapitel \ref{sec:Sensor} befasse ich mich mit allgemeinen Fragen: Wie wird eine Temperatur gemessen?
+Im Kapitel \ref{chapter:Sensor} befasse ich mich mit allgemeinen Fragen: Wie wird eine Temperatur gemessen?
 
-Wie kommt die Information über den Temperatur-Wert in den Controller. Damit beschäftige ich mich in Kapitel \ref{sec:SensorAnController}.
+Wie kommt die Information über den Temperatur-Wert in den Controller. Damit beschäftige ich mich in Kapitel \ref{chapter:SensorAnController}.
 
-Kapitel \ref{sec:AusgabeLed} befasst sich mit der Frage: wie kann ich eine LED ein- und ausschalten. Zum Beispiel in Abhängigkeit eines Messwerts aus  Kapitel \ref{sec:Sensor}.
+Kapitel \ref{chapter:AusgabeLed} befasst sich mit der Frage: wie kann ich eine LED ein- und ausschalten. Zum Beispiel in Abhängigkeit eines Messwerts aus  Kapitel \ref{chapter:Sensor}.
 
-Im Kapitel \ref{sec:Mqtt} befasse ich mich mit der Erweiterung der Schaltung und lasse die gemessenen Daten vom Raspberry Pi zu einem Server (MQTT-Server) übertragen. Bei dem MQTT-Server abonnieren Clients die Messwerte und lassen sich über den aktuellen Wert und Veränderungen informieren.
+Im Kapitel \ref{chapter:Mqtt} befasse ich mich mit der Erweiterung der Schaltung und lasse die gemessenen Daten vom Raspberry Pi zu einem Server (MQTT-Server) übertragen. Bei dem MQTT-Server abonnieren Clients die Messwerte und lassen sich über den aktuellen Wert und Veränderungen informieren.
 
-Das Kapitel \ref{sec:MotorAnsteuern} befasst sich mit leistungsstärkeren Verbrauchern, die von dem Controller (Arduino Uno R3, Raspberry Pi, \dots) gesteuert werden sollen. Wie man die Signale des Controllers passend verstärkt und was man bei Relais unbedingt beachten sollte ist hier der Inhalt des Kapitels.
+Das Kapitel \ref{chapter:MotorAnsteuern} befasst sich mit leistungsstärkeren Verbrauchern, die von dem Controller (Arduino Uno R3, Raspberry Pi, \dots) gesteuert werden sollen. Wie man die Signale des Controllers passend verstärkt und was man bei Relais unbedingt beachten sollte ist hier der Inhalt des Kapitels.
 
-Final im Kapitel \ref{sec:BusseI2cSpi} befasse ich mich mit Sensoren, die ihre Messwerte nicht als analoge Spannung liefern, sonder in digitaler Form. $I^2C$ und SPI sind hier typische Transportmittel, sogenannte Busse. RS232 kann man zusätzlich zur Kommunikation mit dem PC verwenden. Spoiler: ein Arduino Uno R3 ist per USB am PC angeschlossen, eigentlich kommunizieren die beiden nicht über USB.
+Final im Kapitel \ref{chapter:BusseI2cSpi} befasse ich mich mit Sensoren, die ihre Messwerte nicht als analoge Spannung liefern, sonder in digitaler Form. $I^2C$ und SPI sind hier typische Transportmittel, sogenannte Busse. RS232 kann man zusätzlich zur Kommunikation mit dem PC verwenden. Spoiler: ein Arduino Uno R3 ist per USB am PC angeschlossen, eigentlich kommunizieren die beiden nicht über USB.
 
 % \end{abstract}
 
 \chapter{Weg der Information Sensor - Programm - Aktor}
-\label{sec:Sensor}
+\label{chapter:Sensor}
 Temperaturmessung ist in der Regel einfach \dots Ein Blick auf ein Thermometer verschafft die gewünschte Information. Bei Luftfeuchtigkeit ist es der Hydrometer.
 
 Lediglich die Zugänglichkeit ist eingeschränkt. Ich muss physisch an den Ort des Messgeräts kommen.
@@ -63,7 +63,7 @@ Bei Veränderung der Temperatur verändert sich auch der Widerstandswert. Der Se
 Die Veränderung des Widerstandswerts kann man mit einem passenden Messgerät (Widerstandsmessgerät alternativ Multimeter) beobachten. Zur automatischen Messung ist dies nur bedingt geeignet. Dass Messgerät muss dann über eine Datenschnittstelle mit dem Controller / Computer verbunden werden.
 
 \chapter{Von der Temperatur in den Controller}
-\label{sec:SensorAnController}
+\label{chapter:SensorAnController}
 Für die Messung mit dem Controller / Computer müssen die Informationen passend aufbereitet werden. Ein Raspberry Pi, Arduino (Uno R3) oder andere Controller können eine Spannung messen und als digitaler Wert abspeichern/verarbeiten.
 
 \begin{wrapfigure}{l}{0.5\textwidth}
@@ -117,14 +117,14 @@ Die Quelle $U_0$ ist die Spannungsversorgung (PWR, 5V) vom Arduino. der untere A
 Wenn alles korrekt ist ($R_1 = R_2 = 1000 \Omega$) soll ein Wert von ca. 512 gemessen werden. Ein Wert von ca. 0 oder ca. 1024 ist falsch.
 
 \chapter{Vom Controller zur Aktion}
-\label{sec:AusgabeLed}
+\label{chapter:AusgabeLed}
 
 \chapter{Mehr als lokale Daten: mit MQTT ins Netzwerk}
-\label{sec:Mqtt}
+\label{chapter:Mqtt}
 
 \chapter{Große Lasten schalten: Motoren und andere Verbraucher}
-\label{sec:MotorAnsteuern}
+\label{chapter:MotorAnsteuern}
 
 \chapter{Von Bussen in der Elektronik: I2C und SPI}
-\label{sec:BusseI2cSpi}
+\label{chapter:BusseI2cSpi}
 \end{document}
